Implemented extra verifications